--- a/Used car price prediction..ipynb
+++ b/Used car price prediction..ipynb
@@ -692,13 +692,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
@@ -719,10 +712,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file = open('RFR_model.pickle', 'rb')\n",
+    "RF_model = pickle.load(file)\n",
+    "file.close()\n",
+    "    \n",
+    "def predict(a,model=RF_model):\n",
+    "    val=RF_model.predict(a)\n",
+    "    return val.va"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5.366])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict([list(X_train.iloc[2])])"
+   ]
   },
   {
    "cell_type": "code",
